[package]
name = "mindfuck"
readme = "README.md"
authors = ["Luca Sforza <lucasforza1234@icloud.com>"]
license = "MIT"
description = "Brainfuck interpreter in Rust"
version = "1.0.2"
edition = "2021"
keywords = ["brainfuck", "interpreter", "esolang", "cli"]
categories = ["Command line utilities","Development tools"]
homepage = "https://github.com/LucaSforza/brainfuck"
repository = "https://github.com/LucaSforza/brainfuck"
